# coin-bot

./: .env.example  README.md  binance-trader.py  browser_manager.py  ftx-trader.py  main.py  market-analyser.py  pyproject.toml  requirements.txt  twitter-check.py
src/coin_trade_bot/: __init__.py  binance_trader.py  browser_manager.py  main.py  market_analyzer.py  test_env.py  trading_strategy.py  twitter_monitor.py  x_monitor.py
