[tool.poetry]
name = "coin-trade-bot"
version = "0.1.0"
description = "A cryptocurrency trading bot that monitors Coinbase Pro X notifications and executes trades on Binance"
authors = [
    {name = "metetrkn",email = "metetrkn52@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.18.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
